--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,10 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Ignore untracked files and directories
+client/build/
+client/node_modules/
+client/package-lock.json
+package-lock.json
+
